修改pom文件结构，添加account-captcha和account-service模块

--- a/account-persist/pom.xml
+++ b/account-persist/pom.xml
@@ -1,77 +1,94 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>account-persist</artifactId>
-  <packaging>jar</packaging>
-  <name>account-persist</name>
+    <artifactId>account-persist</artifactId>
+    <packaging>jar</packaging>
+    <name>account-persist</name>
 
-  <parent>
-    <groupId>com.dhf.mvn.account</groupId>
-    <artifactId>account</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>com.dhf.mvn.account</groupId>
+        <artifactId>account</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-  <!--用于资源文件的过滤-->
- <!--<properties>-->
+    <!--用于资源文件的过滤-->
+    <!--<properties>-->
     <!--<persist.file>${project.build.directory}/persist-data.xml</persist.file>-->
-  <!--</properties>-->
+    <!--</properties>-->
 
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>dom4j</groupId>
-      <artifactId>dom4j</artifactId>
-      <version>1.6.1</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+    </dependencies>
 
-  <build>
-    <filters>
-      <filter>src/main/filters/filter.properties</filter>
-    </filters>
-    <resources>
-      <!--
-      可以在资源文件中使用${xxx}来表示变量，之后使用多种方式填充该变量，一种是上面声明的filter，
-      创建一个属性文件保存资源文件中的变量值并声明在pom的filter中，可以声明多个。之后在下面指定
-      需要填充变量的资源目录，将filtering指定为true，就能实现过滤
-      还有一种方式是直接在这个pom的properties中声明，pom中的优先级高
-      还有一种是在命令行使用mvn命令时用-D选项指定，如mvn clean test -Dpersist.file=/tmp/persist-data.xml
-      命令行优先级最高
-      -->
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
+    <build>
+        <filters>
+            <filter>src/main/filters/filter.properties</filter>
+        </filters>
+        <resources>
+            <!--
+            可以在资源文件中使用${xxx}来表示变量，之后使用多种方式填充该变量，一种是上面声明的filter，
+            创建一个属性文件保存资源文件中的变量值并声明在pom的filter中，可以声明多个。之后在下面指定
+            需要填充变量的资源目录，将filtering指定为true，就能实现过滤
+            还有一种方式是直接在这个pom的properties中声明，pom中的优先级高
+            还有一种是在命令行使用mvn命令时用-D选项指定，如mvn clean test -Dpersist.file=/tmp/persist-data.xml
+            命令行优先级最高
+            如果想要针对某些资源进行filtering，而有的资源不进行filtering则需要配置includes和excludes，如
+            <resource>
+              <directory>src/main/resources</directory>
+              <filtering>true</filtering>
+              <includes>
+                <include>**/*.xml</include>
+                <include>**/*.properties</include>
+              </includes>
+            </resource>
+            <resource>
+              <directory>src/main/resources</directory>
+              <filtering>false</filtering>
+              <excludes>
+                <exclude>**/*.xml</exclude>
+                <exclude>**/*.properties</exclude>
+              </excludes>
+            </resource>
+            -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
