--- a/account-persist/src/main/filters/filter.properties
+++ b/account-persist/src/main/filters/filter.properties
@@ -1,2 +1,5 @@
 #最后值为/Users/dhf/IdeaProjects/account/account-persist/target/classes/persist-data.xml
+#但是用project.build.directory不好因为当这个模块作为依赖添加到其他模块后，由于属性值是通过filtering填充的
+#所以在其他模块accountPersistService的file的值是/Users/dhf/IdeaProjects/account/account-persist/target/classes/persist-data.xml
+#而不是希望的某个那个工程的目录
 persist.file=${project.build.directory}/classes/persist-data.xml
