--- a/account-persist/pom.xml
+++ b/account-persist/pom.xml
@@ -70,6 +70,22 @@
                 <exclude>**/*.properties</exclude>
               </excludes>
             </resource>
+
+            如果需要为webapp目录下的资源文件过滤，则配置插件如
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1-beta-1</version>
+                <configuration>
+                    <webResources>
+                        <filtering>true</filtering>
+                        <directory>src/main/webapp</directory>
+                        <includes>
+                            <include>**/*.js</include>
+                        </includes>
+                    </webResources>
+                </configuration>
+            </plugin>
             -->
             <resource>
                 <directory>src/main/resources</directory>
@@ -88,6 +104,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
             </plugin>
         </plugins>
     </build>
